--- a/index.html
+++ b/index.html
@@ -1,1 +1,63 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Climate Change</title>
+
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+<link rel="stylesheet" href="week_2.css">
+<script src="week_2.js"></script>
+</head>
+
+
+<body>
+    <h1>Climate Change</h1>
+    <hr/>
+    <br>
+    <br>
+    <header>
+        <div class="headerfirst">
+            <h2>Why we are facing with Climate Change? <br> What are the causes?</h2>
+        </div>
+        <br>
+        <div class="text1">
+<pre><i>  
+ The mechanics of the earth’s climate system are simple. When energy from the sun is reflected off the earth and back into space (mostly by clouds and ice), or when the earth’s
+atmosphere releases energy, the planet cools. When the earth absorbs the sun’s energy, or when atmospheric gases prevent heat released by the earth from radiating into space 
+<a href="https://www.environment.gov.au/climate-change/climate-science-data/climate-science/greenhouse-effect">(the greenhouse effect)</a>, the planet warms. A variety of factors, both natural and human, can influence the earth’s climate system. Factors:</i></pre>
+        </div>
+
+        <div class="list">
+            <li>Humanity’s increased use of fossil fuels</li>
+            <li>Deforestation</li>
+            <li>Increasingly intensive agriculture</li>
+        </div>
+
+        <br>
+        <br>
+        
+        <div class="photo">
+            <img src="https://climate.nasa.gov/system/internal_resources/details/original/103_shutterstock_88550854-740px.jpg" alt="">
+        </div>
+            </header>
+    <br>
+    <br>
+    <hr>
+
+    <ul>
+        <li><a href="file:///C:/Users/MasTer/OneDrive/Desktop/WEBSITECIKLERIM/Practicals/Week%202/week_2/week_2.html">Home</a></li>
+        <li><a href="https://www.nrdc.org/stories/global-climate-change-what-you-need-know">Useful Link 1</a></li>
+        <li><a href="https://www.wwf.org.nz/what_we_do/climateaction/causes_of_climate_change/">Useful Link 2</a></li>
+      </ul>
+
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</body>
+
+</html>
+
